--- a/src/Assignment-2/assignment2.html
+++ b/src/Assignment-2/assignment2.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
-    />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <script src="bundle.js" type="text/javascript"></script>
-  </head>
+<head>
+	<title></title>
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
+	<script src="bundle.js" type="text/javascript"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <!-- Start your code from here -->
-      <header style="border:1px solid gray; background-color:#f5f1eb;">
+<body>
+	<div id="container">
+
+	<!-- Start your code from here -->
+	<header style="border:1px solid gray; background-color:#f5f1eb;">
         <div class="logo">
-          <img src="img/logo2.png" >
+          <img src="img/logo2.png">
           <div class="search">
             <form>
-              <input type="text" placeholder="Search" name="search-bar" />
+              <input type="text" placeholder="Search" name="search-bar"/>
             </form>
           </div>
 	
@@ -90,23 +88,27 @@
 		<p>This is the footer of webpage which contains footer information of webpage. </p>
 	</footer>
 
-      <!-- End your code -->
-    </div>
+	<!-- End your code -->
 
-    <script type="text/javascript"></script>
-  </body>
-  <script>
-    /* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */
-    // Get HTML head element
-    var head = document.getElementsByTagName("HEAD")[0];
-    // Create new link Element
-    var link = document.createElement("link");
-    // set the attributes for link element
-    link.rel = "stylesheet";
-    link.type = "text/css";
-    link.href = "./screen.css?v=" + new Date().getTime();
-    // Append link element to HTML head
-    head.appendChild(link);
-    /* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */
-  </script>
+	</div>
+
+	<script type="text/javascript">
+
+	</script>
+
+</body>
+<script>
+/* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */	  
+	// Get HTML head element
+	var head = document.getElementsByTagName('HEAD')[0]; 
+	// Create new link Element
+	var link = document.createElement('link');
+	// set the attributes for link element 
+	link.rel = 'stylesheet'; 
+	link.type = 'text/css';
+	link.href = './assignment2.css?v='+ new Date().getTime(); 
+	// Append link element to HTML head
+	head.appendChild(link); 
+	/* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */	  
+</script> 
 </html>
